cs21b027_lab6/y.output
Grammar

    0 $accept: input $end

    1 input: stmt SEMICOLON input
    2      | stmt SEMICOLON

    3 $@1: ε

    4 input: error SEMICOLON $@1 input
    5      | error SEMICOLON

    6 stmt: assign_stmt
    7     | pre_expr
    8     | post_expr

    9 assign_stmt: ID ASSIGN expr

   10 pre_expr: INC ID
   11         | DEC ID

   12 post_expr: ID INC
   13          | ID DEC

   14 expr: expr PLUS term
   15     | expr MINUS term
   16     | term

   17 term: term MUL factor
   18     | term DIV factor
   19     | factor

   20 factor: LPAREN expr RPAREN
   21       | ID
   22       | NUM
   23       | pre_expr
   24       | post_expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 5
    INC (258) 10 12
    DEC (259) 11 13
    ASSIGN (260) 9
    PLUS (261) 14
    MINUS (262) 15
    MUL (263) 17
    DIV (264) 18
    LPAREN (265) 20
    RPAREN (266) 20
    ID (267) 9 10 11 12 13 21
    NUM (268) 22
    SEMICOLON (269) 1 2 4 5


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    input (16)
        on left: 1 2 4 5
        on right: 0 1 4
    $@1 (17)
        on left: 3
        on right: 4
    stmt (18)
        on left: 6 7 8
        on right: 1 2
    assign_stmt (19)
        on left: 9
        on right: 6
    pre_expr (20)
        on left: 10 11
        on right: 7 23
    post_expr (21)
        on left: 12 13
        on right: 8 24
    expr (22)
        on left: 14 15 16
        on right: 9 14 15 20
    term (23)
        on left: 17 18 19
        on right: 14 15 16 17 18
    factor (24)
        on left: 20 21 22 23 24
        on right: 17 18 19


State 0

    0 $accept: • input $end

    error  shift, and go to state 1
    INC    shift, and go to state 2
    DEC    shift, and go to state 3
    ID     shift, and go to state 4

    input        go to state 5
    stmt         go to state 6
    assign_stmt  go to state 7
    pre_expr     go to state 8
    post_expr    go to state 9


State 1

    4 input: error • SEMICOLON $@1 input
    5      | error • SEMICOLON

    SEMICOLON  shift, and go to state 10


State 2

   10 pre_expr: INC • ID

    ID  shift, and go to state 11


State 3

   11 pre_expr: DEC • ID

    ID  shift, and go to state 12


State 4

    9 assign_stmt: ID • ASSIGN expr
   12 post_expr: ID • INC
   13          | ID • DEC

    INC     shift, and go to state 13
    DEC     shift, and go to state 14
    ASSIGN  shift, and go to state 15


State 5

    0 $accept: input • $end

    $end  shift, and go to state 16


State 6

    1 input: stmt • SEMICOLON input
    2      | stmt • SEMICOLON

    SEMICOLON  shift, and go to state 17


State 7

    6 stmt: assign_stmt •

    $default  reduce using rule 6 (stmt)


State 8

    7 stmt: pre_expr •

    $default  reduce using rule 7 (stmt)


State 9

    8 stmt: post_expr •

    $default  reduce using rule 8 (stmt)


State 10

    4 input: error SEMICOLON • $@1 input
    5      | error SEMICOLON •

    $end      reduce using rule 5 (input)
    $default  reduce using rule 3 ($@1)

    $@1  go to state 18


State 11

   10 pre_expr: INC ID •

    $default  reduce using rule 10 (pre_expr)


State 12

   11 pre_expr: DEC ID •

    $default  reduce using rule 11 (pre_expr)


State 13

   12 post_expr: ID INC •

    $default  reduce using rule 12 (post_expr)


State 14

   13 post_expr: ID DEC •

    $default  reduce using rule 13 (post_expr)


State 15

    9 assign_stmt: ID ASSIGN • expr

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    expr       go to state 24
    term       go to state 25
    factor     go to state 26


State 16

    0 $accept: input $end •

    $default  accept


State 17

    1 input: stmt SEMICOLON • input
    2      | stmt SEMICOLON •

    error  shift, and go to state 1
    INC    shift, and go to state 2
    DEC    shift, and go to state 3
    ID     shift, and go to state 4

    $end  reduce using rule 2 (input)

    input        go to state 27
    stmt         go to state 6
    assign_stmt  go to state 7
    pre_expr     go to state 8
    post_expr    go to state 9


State 18

    4 input: error SEMICOLON $@1 • input

    error  shift, and go to state 1
    INC    shift, and go to state 2
    DEC    shift, and go to state 3
    ID     shift, and go to state 4

    input        go to state 28
    stmt         go to state 6
    assign_stmt  go to state 7
    pre_expr     go to state 8
    post_expr    go to state 9


State 19

   20 factor: LPAREN • expr RPAREN

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    expr       go to state 29
    term       go to state 25
    factor     go to state 26


State 20

   12 post_expr: ID • INC
   13          | ID • DEC
   21 factor: ID •

    INC  shift, and go to state 13
    DEC  shift, and go to state 14

    $default  reduce using rule 21 (factor)


State 21

   22 factor: NUM •

    $default  reduce using rule 22 (factor)


State 22

   23 factor: pre_expr •

    $default  reduce using rule 23 (factor)


State 23

   24 factor: post_expr •

    $default  reduce using rule 24 (factor)


State 24

    9 assign_stmt: ID ASSIGN expr •
   14 expr: expr • PLUS term
   15     | expr • MINUS term

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31

    $default  reduce using rule 9 (assign_stmt)


State 25

   16 expr: term •
   17 term: term • MUL factor
   18     | term • DIV factor

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 16 (expr)


State 26

   19 term: factor •

    $default  reduce using rule 19 (term)


State 27

    1 input: stmt SEMICOLON input •

    $default  reduce using rule 1 (input)


State 28

    4 input: error SEMICOLON $@1 input •

    $default  reduce using rule 4 (input)


State 29

   14 expr: expr • PLUS term
   15     | expr • MINUS term
   20 factor: LPAREN expr • RPAREN

    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31
    RPAREN  shift, and go to state 34


State 30

   14 expr: expr PLUS • term

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    term       go to state 35
    factor     go to state 26


State 31

   15 expr: expr MINUS • term

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    term       go to state 36
    factor     go to state 26


State 32

   17 term: term MUL • factor

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    factor     go to state 37


State 33

   18 term: term DIV • factor

    INC     shift, and go to state 2
    DEC     shift, and go to state 3
    LPAREN  shift, and go to state 19
    ID      shift, and go to state 20
    NUM     shift, and go to state 21

    pre_expr   go to state 22
    post_expr  go to state 23
    factor     go to state 38


State 34

   20 factor: LPAREN expr RPAREN •

    $default  reduce using rule 20 (factor)


State 35

   14 expr: expr PLUS term •
   17 term: term • MUL factor
   18     | term • DIV factor

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 14 (expr)


State 36

   15 expr: expr MINUS term •
   17 term: term • MUL factor
   18     | term • DIV factor

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 15 (expr)


State 37

   17 term: term MUL factor •

    $default  reduce using rule 17 (term)


State 38

   18 term: term DIV factor •

    $default  reduce using rule 18 (term)
